--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Lab6_Java6
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ProjectS;encrypt=false
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Lab7_Java6;encrypt=false
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=none
